@@ -133,6 +133,7 @@ Version 1.11.0-svn:
      for shrouded or (visibly) occupied hexes.
    * Fixed bug #19844: Block recruiting into shrouded hexes.
    * Fixed bug #19783: Disable commands while WML menu items are executing.
+   * Fixed bug #19533: Both damage tooltips now take into account local factors.
 
  * Whiteboard:
    * Fixed bug #19369: Using planning mode can cause losing ability to move my
